module5/test-backends.yml
apiVersion: v1
kind: Pod
metadata:
  name: book-pod
  labels: 
    app: book
spec: 
  containers:
    - name: app
      image: nginx
      ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: book-service
spec:
  selector:
    app: book
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: user-pod
  labels:
    app: user
spec:
  containers:
    - name: user
      image: nginx
      ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user
  ports:
    - port: 80
      targetPort: 80
