module5/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - books.my-app.local
      secretName: my-tls
  rules:
    - host: books.my-app.local  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: book-service
                port:
                  number: 80
    - host: users.my-app.local  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
